// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Carousel Component renders correctly 1`] = `
<RCTScrollView
  ListFooterComponent={
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginRight": 20,
          "minWidth": 150,
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#5C7B8A"
        hidesWhenStopped={true}
        size="large"
      />
    </View>
  }
  data={Array []}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={true}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  showsHorizontalScrollIndicator={false}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginRight": 20,
            "minWidth": 150,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#5C7B8A"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders correctly 1`] = `
<RCTScrollView
  ListFooterComponent={
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginRight": 20,
          "minWidth": 150,
        }
      }
    >
      <Themed.Text
        style={
          Array [
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
            },
            Object {
              "color": "#0B354F",
            },
          ]
        }
      >
        Load More
      </Themed.Text>
    </View>
  }
  data={Array []}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={true}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  showsHorizontalScrollIndicator={false}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginRight": 20,
            "minWidth": 150,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#0B354F",
              "fontSize": 18,
              "fontWeight": "bold",
            }
          }
        >
          Load More
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
